<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_gravity="center"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginBottom="4dp"
    app:cardCornerRadius="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:padding="8dp">

        <ImageView
            android:id="@+id/img_item_photo"
            android:layout_width="100dp"
            android:layout_height="150dp"
            android:layout_marginBottom="4dp"
            tools:src="@color/colorAccent"
            android:contentDescription="@string/poster" />

        <LinearLayout
            android:layout_width="285dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="3dp"
            android:layout_toEndOf="@+id/img_item_photo"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_item_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:layout_marginRight="@dimen/activity_vertical_margin"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:layout_marginBottom="2dp"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:text="Title"/>

            <TextView
                android:id="@+id/tv_item_released"
                android:layout_width="245dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:padding="2dp"
                android:textSize="14sp"
                android:textStyle="italic"
                tools:text="Released"/>

        </LinearLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_alignParentBottom="true"
            android:layout_toEndOf="@id/img_item_photo"
            android:orientation="vertical">

            <TableRow
                android:id="@+id/row_first"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="3"
                    android:padding="7dp"
                    android:src="@drawable/ic_stars_24dp"
                    android:contentDescription="@string/ic_star" />

                <TextView
                    android:id="@+id/tv_item_score"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingTop="11dp"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    tools:text="90%"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/ic_time"
                    android:ellipsize="end"
                    android:maxLines="3"
                    android:padding="7dp"
                    android:src="@drawable/ic_timer_24dp" />

                <TextView
                    android:id="@+id/tv_item_runtime"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingTop="11dp"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    tools:text="2h 30m" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/ic_lang"
                    android:ellipsize="end"
                    android:maxLines="3"
                    android:padding="7dp"
                    android:src="@drawable/ic_lang_24dp" />

                <TextView
                    android:id="@+id/tv_item_lang"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingTop="11dp"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    tools:text="English" />

            </TableRow>

        </TableLayout>

    </RelativeLayout>

</android.support.v7.widget.CardView>